--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -5,11 +5,14 @@
 }
 
 .flex-grow {
-    flex-grow: 1;
+    flex-grow: 1;//占一行
 }
 
 .m05 {
     margin: 0 5px;
+}
+.pointer{
+    cursor:pointer;
 }
 
 .color-dark-black {
